form validators login. register and reset pass

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+@import "tailwindcss";
+
+.mdc-notched-outline__notch
+{
+  border-right: none;
+}
+
+body {
+  background: var(--mat-sys-surface);
+  color: var(--mat-sys-on-surface);
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100dvh;
+  height: 100%;
+}
