--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -4,8 +4,22 @@
 @use '@angular/material' as mat;
 @use './themes/theme-color.scss' as theme-color;
 
+:root {
+  @include mat.toolbar-overrides((
+    container-background-color: var(--mat-sys-primary),
+    container-text-color: var(--mat-sys-on-secondary),
+  ));
+}
+
+.mat-toolbar {
+  .mat-icon,
+  .mat-mdc-icon-button {
+    color: var(--mat-sys-on-secondary)
+  }
+}
+
 html {
-   color-scheme: light ;
+   color-scheme: ligth ;
   @include mat.theme((
     color: (
       primary : theme-color.$primary-palette,
