--- a/src/app/core/layout/home-layout/home-layout.component.html
+++ b/src/app/core/layout/home-layout/home-layout.component.html
@@ -1,6 +1,7 @@
 <div class="lh-[100dvh]">
+  <app-toolbar-up/>
   <div>
     <router-outlet></router-outlet>
   </div>
-  <app-main-toolbar></app-main-toolbar>
+  <app-main-toolbar/>
 </div>
