--- a/src/app/features/plans/components/plan-list/plan-list.component.html
+++ b/src/app/features/plans/components/plan-list/plan-list.component.html
@@ -16,7 +16,7 @@
         </mat-panel-title>
         <mat-panel-description class="flex justify-between text-sm">
           Todos somos teólogos y el nombre mas largo
-          <mat-icon class="">book_ribbon</mat-icon>
+          <mat-icon class="">auto_stories</mat-icon>
         </mat-panel-description>
       </mat-expansion-panel-header>
 
